--- a/React/Blog/client/package.json
+++ b/React/Blog/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "react-strap": "0.0.1",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
