--- a/React/Blog/package.json
+++ b/React/Blog/package.json
@@ -13,16 +13,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.6.0",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "history": "^4.7.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-reveal": "^1.2.2",
+    "reactstrap": "^8.9.0",
+    "util": "^0.12.3"
   }
 }
