--- a/React/Blog/client/package.json
+++ b/React/Blog/client/package.json
@@ -87,6 +87,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-refresh": "^0.8.3",
