--- a/React/Blog_ver2/package.json
+++ b/React/Blog_ver2/package.json
@@ -27,6 +27,8 @@
         "moment": "^2.29.1",
         "mongoose": "^5.12.3",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "react-redux": "^7.2.3",
+        "react-strap": "0.0.1"
     }
 }
