--- a/Kotlin/app/build.gradle
+++ b/Kotlin/app/build.gradle
@@ -30,6 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // 데이터 바인딩
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
