--- a/Kotlin/app/build.gradle
+++ b/Kotlin/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // 인증 기능 //
     implementation 'com.google.firebase:firebase-auth-ktx'
+    // 데이터베이스
+    implementation 'com.google.firebase:firebase-database-ktx'
 }
