--- a/Kotlin/basic/app/build.gradle
+++ b/Kotlin/basic/app/build.gradle
@@ -56,4 +56,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // auth
     implementation 'com.google.firebase:firebase-auth-ktx'
+    // realtime
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-database-ktx'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
