--- a/Kotlin/basic/app/src/main/AndroidManifest.xml
+++ b/Kotlin/basic/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.seulgi.basic">
+    <!-- glide 사용을 위한 permission 허용 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Basic">
-        <activity android:name=".auth.JoinActivity"></activity>
+        <activity android:name=".contentsList.ContentShowActivity"></activity>
+        <activity android:name=".contentsList.ContentListActivity" />
+        <activity android:name=".auth.JoinActivity" />
         <activity android:name=".auth.LoginActivity" />
         <activity android:name=".auth.IntroActivity" />
         <activity android:name=".SplashActivity">
