--- a/Kotlin/basic/app/src/main/AndroidManifest.xml
+++ b/Kotlin/basic/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Basic">
-        <activity android:name=".contentsList.ContentShowActivity"></activity>
+        <activity android:name=".board.BoardInsideActivity"></activity>
+        <activity android:name=".board.BoardWriteActivity" />
+        <activity android:name=".contentsList.ContentShowActivity" />
         <activity android:name=".contentsList.ContentListActivity" />
         <activity android:name=".auth.JoinActivity" />
         <activity android:name=".auth.LoginActivity" />
