--- a/Kotlin/basic/app/build.gradle
+++ b/Kotlin/basic/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     // realtime
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-database-ktx'
+    // storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    // storage download
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
